tests/cn/incomplete_match.error.c.expected
return code: 1
tests/cn/incomplete_match.error.c:9:3: error: Incomplete pattern
  match t {
  ^~~~~~~~~ 
